--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.companyname.automobile</groupId>
-  <artifactId>trucks</artifactId>
-  <packaging>war</packaging>
+  <groupId>com</groupId>
+  <artifactId>consumerBanking</artifactId>
+  <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>trucks Maven Webapp</name>
+  <name>consumerBanking</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -15,7 +15,4 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <build>
-    <finalName>trucks</finalName>
-  </build>
 </project>
